# autorenamer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resource.qrc
qml/: main.qml
